# words_on_anime_girls_ocr

./: .gitignore  README.md  ocr_edit.sh  pyproject.toml
words_on_anime_girls/: main.py  old_main.py
